--- a/WebUI/web/css/gameRoom.css
+++ b/WebUI/web/css/gameRoom.css
@@ -12,6 +12,15 @@ body {
     overflow-x: auto;
 }
 
+.playTurn {
+    background-color: whitesmoke;
+    margin: 4% 0;
+    padding: 0 6% 6% 6%;
+    border: solid 2px;
+    border-radius: 4px;
+    overflow-x: auto;
+}
+
 .sectionTitle {
     font-size: 2.5em;
     color: #982929;
